<resources>
    <string name="subtype_ja" translation_description="(0) in http://goo.gl/jLDD7P">Japanese</string>
    <string name="pref_skin_type_key" translation_description="(1) in http://goo.gl/jLDD7P">pref_skin_type_key</string>
    <string name="pref_software_keyboard_category_title" translation_description="(2) in http://goo.gl/jLDD7P">Software keyboard</string>
        <string name="pref_software_keyboard_advanced_settings_title" translation_description="(3) in http://goo.gl/jLDD7P">Software keyboard advanced settings</string>
    <string name="pref_fragment_software_keyboard_title" translation_description="(230) in http://goo.gl/jLDD7P">Software keyboard</string>
    <string name="pref_fragment_input_support_title" translation_description="(231) in http://goo.gl/jLDD7P">Input support</string>
    <string name="pref_fragment_conversion_title" translation_description="(232) in http://goo.gl/jLDD7P">Conversion</string>
    <string name="pref_fragment_dictionary_title" translation_description="(233) in http://goo.gl/jLDD7P">Dictionary</string>
    <string name="pref_fragment_user_feedback_title" translation_description="(234) in http://goo.gl/jLDD7P">User feedback</string>
    <string name="pref_fragment_about_title" translation_description="(235) in http://goo.gl/jLDD7P">About</string>
    <string name="pref_fragment_development_title" translation_description="(236) in http://goo.gl/jLDD7P">Development</string>
    <string name="pref_software_keyboard_preferences_portrait_title" translation_description="(4) in http://goo.gl/jLDD7P">Software keyboard preferences for portrait mode</string>
    <string name="pref_software_keyboard_preferences_landscape_title" translation_description="(5) in http://goo.gl/jLDD7P">Software keyboard preferences for landscape mode</string>
        <string name="pref_keyboard_layout_title" translation_description="Title label in the settings">Keyboard layout</string>
        <string name="pref_input_style_title" translation_description="Item label in the settings">Input style</string>
        <string name="pref_qwerty_layout_for_alphabet_title" translation_description="Title label of pref_qwerty_layout_for_alphabet_description in the settings">QWERTY mode</string>
        <string name="pref_flick_sensitivity_title" translation_description="(9) in http://goo.gl/jLDD7P">Flick sensitivity</string>
        <string name="pref_use_portrait_keyboard_settings_for_landscape_title" translation_description="(10) in http://goo.gl/jLDD7P">Use portrait settings</string>
        <string name="pref_keyboard_height_ratio_title" translation_description="(11) in http://goo.gl/jLDD7P">Keyboard height</string>
    <string name="pref_input_feedback_category_title" translation_description="(12) in http://goo.gl/jLDD7P">Input feedback preferences</string>
        <string name="pref_haptic_feedback_title" translation_description="(13) in http://goo.gl/jLDD7P">Haptic feedback</string>
        <string name="pref_haptic_feedback_duration_title" translation_description="(14) in http://goo.gl/jLDD7P">Haptic feedback duration</string>
        <string name="pref_sound_feedback_title" translation_description="(15) in http://goo.gl/jLDD7P">Audio feedback</string>
        <string name="pref_sound_feedback_volume_title" translation_description="(16) in http://goo.gl/jLDD7P">Audio feedback volume</string>
        <string name="pref_popup_feedback_title" translation_description="(17) in http://goo.gl/jLDD7P">Popup feedback</string>
    <string name="pref_other_input_support_preference_category_title" translation_description="(18) in http://goo.gl/jLDD7P">Other input support preferences</string>
        <string name="pref_fullscreen_title" translation_description="(19) in http://goo.gl/jLDD7P">Fullscreen mode</string>
        <string name="pref_skin_type_title" translation_description="(20) in http://goo.gl/jLDD7P">Keyboard theme</string>
        <string name="pref_hardware_title" translation_description="(21) in http://goo.gl/jLDD7P">Preferences for hardware keyboards</string>
        <string name="pref_voice_input_title" translation_description="(228) in http://goo.gl/jLDD7P">Show voice input button</string>
    <string name="pref_conversion_category_title" translation_description="(22) in http://goo.gl/jLDD7P">Conversion preferences</string>
        <string name="pref_layout_adjustment_title" translation_description="(23) in http://goo.gl/jLDD7P">Layout adjustment</string>
        <string name="pref_space_character_form_title" translation_description="(24) in http://goo.gl/jLDD7P">Use half-width space</string>
        <string name="pref_kana_modifier_insensitive_conversion_title" translation_description="(25) in http://goo.gl/jLDD7P">Modifier insensitive conversion</string>
        <string name="pref_typing_correction_title" translation_description="(26) in http://goo.gl/jLDD7P">Typing correction</string>
        <string name="pref_other_incognito_mode_title" translation_description="(27) in http://goo.gl/jLDD7P">Incognito mode</string>
        <string name="pref_emoji_provider_type_title" translation_description="(28) in http://goo.gl/jLDD7P">Select Emoji provider</string>
    <string name="pref_dictionry_category_title" translation_description="(29) in http://goo.gl/jLDD7P">Dictionary preferences</string>
        <string name="pref_dictionary_personalization_title" translation_description="(30) in http://goo.gl/jLDD7P">Personalization</string>
        <string name="pref_dictionary_user_dictionary_tool_title" translation_description="(31) in http://goo.gl/jLDD7P">Dictionary Tool</string>
        <string name="pref_clear_category_title" translation_description="(32) in http://goo.gl/jLDD7P">Clear history</string>
            <string name="pref_clear_conversion_history_title" translation_description="(33) in http://goo.gl/jLDD7P">Conversion history</string>
            <string name="pref_clear_symbol_history_title" translation_description="(34) in http://goo.gl/jLDD7P">Symbol history</string>
            <string name="pref_clear_user_dictionary_title" translation_description="(35) in http://goo.gl/jLDD7P">User dictionary</string>
    <string name="pref_user_feedback_category_title" translation_description="(36) in http://goo.gl/jLDD7P">User feedback</string>
      <string name="pref_other_usage_stats_title" translation_description="(37) in http://goo.gl/jLDD7P">Send usage statistics</string>
    <string name="pref_about_about_this_software_title" translation_description="(38) in http://goo.gl/jLDD7P">About this software</string>
        <string name="pref_about_version_title" translation_description="(39) in http://goo.gl/jLDD7P">Version</string>
        <string name="pref_about_terms_of_service_title" translation_description="(40) in http://goo.gl/jLDD7P">Terms of service</string>
        <string name="pref_about_privacy_policy_title" translation_description="(41) in http://goo.gl/jLDD7P">Privacy policy</string>
        <string name="pref_about_oss_credits_title" translation_description="(42) in http://goo.gl/jLDD7P">Open source software</string>
        <string name="pref_launcher_icon_visibility_title" translation_description="(43) in http://goo.gl/jLDD7P">Show app icon</string>
        <string name="pref_haptic_feedback_description" translation_description="(44) in http://goo.gl/jLDD7P">Vibrate on key press.</string>
        <string name="pref_sound_feedback_description" translation_description="(45) in http://goo.gl/jLDD7P">Sound on key press.</string>
        <string name="pref_popup_feedback_description" translation_description="(46) in http://goo.gl/jLDD7P">Popup on key press.</string>
        <string name="pref_keyboard_layout_description" translation_description="(47) in http://goo.gl/jLDD7P">Switch keyboard layout.</string>
            <string name="pref_keyboard_layout_title_12keys" translation_description="(48) in http://goo.gl/jLDD7P">12 keys</string>
            <string name="pref_keyboard_layout_title_qwerty" translation_description="(49) in http://goo.gl/jLDD7P">QWERTY</string>
            <string name="pref_keyboard_layout_title_godan" translation_description="(50) in http://goo.gl/jLDD7P">Godan Keyboard</string>
            <string name="pref_keyboard_layout_description_12keys" translation_description="(51) in http://goo.gl/jLDD7P">Mobile phone layout.</string>
            <string name="pref_keyboard_layout_description_qwerty" translation_description="(52) in http://goo.gl/jLDD7P">PC keyboard layout.</string>
            <string name="pref_keyboard_layout_description_godan" translation_description="(53) in http://goo.gl/jLDD7P">Romaji-dedicated layout. <![CDATA[<a href=\'http://support.google.com/ime/japanese/bin/answer.py?hl=ja&topic=25606&answer=2700298\'>Usage</a>]]></string>
        <string name="pref_input_style_setting_description" translation_description="(54) in http://goo.gl/jLDD7P">Select input style.</string>
        <string name="pref_qwerty_layout_for_alphabet_description" translation_description="(55) in http://goo.gl/jLDD7P">If checked, QWERTY layout will be used for alphabet input mode regardless of main layout.</string>
        <string name="pref_fullscreen_description" translation_description="(56) in http://goo.gl/jLDD7P">If checked, target textbox shows in fullscreen mode.</string>
        <string name="pref_flick_sensitivity_description" translation_description="(57) in http://goo.gl/jLDD7P">Tune the flick sensitivity.</string>
        <string name="pref_layout_adjustment_description" translation_description="(58) in http://goo.gl/jLDD7P">Switch keyboard adjustment.</string>
        <string name="pref_keyboard_height_ratio_description" translation_description="(59) in http://goo.gl/jLDD7P">Change the keyboard height.</string>
        <string name="pref_space_character_form_description" translation_description="(60) in http://goo.gl/jLDD7P">Always use half-width space, no matter the input mode.</string>
        <string name="pref_kana_modifier_insensitive_conversion_description" translation_description="(61) in http://goo.gl/jLDD7P">Use kana modifier insensitive conversion. Applied to 12 keys and Godan keyboard. e.g. かつこう→学校</string>
        <string name="pref_typing_correction_description" translation_description="(62) in http://goo.gl/jLDD7P">Detect mistyping and show corrected candidates. e.g. すんかい→深海</string>
        <string name="pref_emoji_provider_type_description" translation_description="(63) in http://goo.gl/jLDD7P">Select the Emoji provider properly to use emoji.</string>
        <string name="pref_skin_type_description" translation_description="(64) in http://goo.gl/jLDD7P">Select the keyboard theme to customize the software keyboard look.</string>
        <string name="pref_voice_input_description" translation_description="(229) in http://goo.gl/jLDD7P">Show voice input button on the software keyboard.</string>
        <string name="pref_hardware_keymap_description" translation_description="(65) in http://goo.gl/jLDD7P">Select key mapping for hardware keyboards.</string>
        <string name="pref_dictionary_personalization_description" translation_description="(66) in http://goo.gl/jLDD7P">Enable personal suggestions based on past input.</string>
        <string name="pref_dictionary_user_dictionary_tool_description" translation_description="(67) in http://goo.gl/jLDD7P">Edit user dictionaries.</string>
        <string name="pref_other_incognito_mode_description" translation_description="(72) in http://goo.gl/jLDD7P">Temporarily disable personalization, suggestions and user dictionary.</string>
    <string name="firsttime_close_button" translation_description="(102) in http://goo.gl/jLDD7P">Next &gt;&gt;</string>
    <string name="firsttime_send_usage_stats_devchannel" translation_description="(105) in http://goo.gl/jLDD7P">Usage statistics are enabled because you are using a development version.</string>
</resources>