<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright 2010-2014, Google Inc.
 All rights reserved.

 Redistribution and use in source and binary forms, with or without
 modification, are permitted provided that the following conditions are
 met:

     * Redistributions of source code must retain the above copyright
 notice, this list of conditions and the following disclaimer.
     * Redistributions in binary form must reproduce the above
 copyright notice, this list of conditions and the following disclaimer
 in the documentation and/or other materials provided with the
 distribution.
     * Neither the name of Google Inc. nor the names of its
 contributors may be used to endorse or promote products derived from
 this software without specific prior written permission.

 THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
 "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
 LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
 A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
 OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
 SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
 LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
 DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
 THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
  <PreferenceCategory android:title="@string/pref_conversion_category_title">
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_space_character_form_key"
        android:summary="@string/pref_space_character_form_description"
        android:title="@string/pref_space_character_form_title" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="pref_kana_modifier_insensitive_conversion"
        android:summary="@string/pref_kana_modifier_insensitive_conversion_description"
        android:title="@string/pref_kana_modifier_insensitive_conversion_title" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="pref_typing_correction"
        android:summary="@string/pref_typing_correction_description"
        android:title="@string/pref_typing_correction_title" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_other_anonimous_mode_key"
        android:summary="@string/pref_other_incognito_mode_description"
        android:title="@string/pref_other_incognito_mode_title" />

    <ListPreference
        android:entries="@array/pref_emoji_provider_type_entries"
        android:entryValues="@array/pref_emoji_provider_type_values"
        android:key="pref_emoji_provider_type"
        android:summary="@string/pref_emoji_provider_type_description"
        android:title="@string/pref_emoji_provider_type_title" />
  </PreferenceCategory>
</PreferenceScreen>
